# traverse subdirectories
set(TTK_BASECODES "")
file(GLOB BASECODE_DIRS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)
foreach(BASECODE ${BASECODE_DIRS})
  if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${BASECODE})
    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/${BASECODE})
    list(APPEND TTK_BASECODES "${BASECODE}")
  endif()
endforeach()

set(TTK_BASECODES ${TTK_BASECODES} CACHE INTERNAL "")
